--- a/proj_SpecialIssues/website/templates/users/users_detalhes.html
+++ b/proj_SpecialIssues/website/templates/users/users_detalhes.html
@@ -15,5 +15,6 @@
     <p><b>Link:</b> <a href="{{ spi.link }}" target="_blank">{{ spi.link }}</a></p>
     <p><b>Detalhes:</b> {{ spi.detalhes|safe }}</p>
 </div>
+{% include 'footer.html' %}
 
 {% endblock content %}
