--- a/proj_SpecialIssues/website/static/css/gerenciar.css
+++ b/proj_SpecialIssues/website/static/css/gerenciar.css
@@ -14,7 +14,7 @@
 }
 
 .table th {
-    background-color: #0a497e;
+    background-color: #0a497e!important;
     font-weight: normal;
     color: #f5f5f5;
     text-align: center;
@@ -29,23 +29,23 @@
     margin: 0 auto;
 }
 .btn-control {
-    background-color: white;
-    border-color: #0a497e;
-    transition-duration: 0s;
-    color: #0a497e;
+    background-color: white!important;
+    border-color: #0a497e!important;
+    transition-duration: 0s!important;
+    color: #0a497e!important;
 }
 .btn-control:hover {
-    background-color: #113a5c;
-    border-color: #113a5c;
-    color: white;
+    background-color: #113a5c!important;
+    border-color: #113a5c!important;
+    color: white!important;
 }
 .btn-danger {
-    background-color: white;
-    transition-duration: 0s;
-    color: red;
+    background-color: white!important;
+    transition-duration: 0.2s!important;
+    color: red!important;
 }
 .btn-danger:hover {
-    background-color: red;
-    border-color: red;
-    color: white;
+    background-color: red!important;
+    border-color: red!important;
+    color: white!important;
 }
