--- a/proj_SpecialIssues/website/static/css/busca.css
+++ b/proj_SpecialIssues/website/static/css/busca.css
@@ -1,13 +1,13 @@
+
 .container ul {
     list-style-type: none; 
 }
 
 .container a {
     color: #0a497e;
-    font-size: 22px;
+    font-size:22px;
     margin-top: 50px;
     text-decoration: none; 
- 
 }
 
 .container a:hover {
@@ -21,31 +21,25 @@
     font-size: 15px;
 }
 
-.container .aviso{
-    margin-bottom: 10px; 
-    display: block; 
-    margin-top: 25px;
-    font-size: 20px;
-}
-
-
 .container .special-issue {
     margin-bottom: 10px; 
     display: block; 
     margin-top: 25px;
 }
-.col {
+.col{
     text-align: center;
 }
 .container .col a.btn-outline-primary {
     background-color: white;
     border-color: #0a497e;
     color: #0a497e; 
-    transition-duration: 0s;
+    transition-duration: 0.2s;
     text-decoration: none;
     width: 25px; 
     height: 30px; 
+    
     font-size: medium;
+    
 }
 
 .container .col a.btn-outline-primary:hover {
@@ -53,7 +47,6 @@
     border-color: #0a497e;
     color: white; 
 }
-
 .container .col a.btn-primary {
     background-color: #0a497e;
     border-color: #0a497e;
@@ -63,4 +56,9 @@
     width: 25px; 
     height: 30px; 
     font-size: medium;
+  
+}
+.container{
+    padding: 10px;
+
 }
