--- a/proj_SpecialIssues/website/templates/footer.html
+++ b/proj_SpecialIssues/website/templates/footer.html
@@ -6,9 +6,9 @@
 
 <div class="footer-container">
     <div class="footer-infos">
-        <p class="info">Made by <a href="https://github.com/accoelhos" class="footer-link">Ana Carolina Sá</a>  |</p> 
+        <p class="info">Made by <a href="https://github.com/accoelhos" target="_blank" class="footer-link">Ana Carolina Sá</a>  |</p> 
         <p class="info">
-            <a class="footer-link" href="https://eic.cefet-rj.br/~dal/">Data Analytics Lab</a></p>
+            <a class="footer-link" href="https://eic.cefet-rj.br/~dal/" target="_blank">Data Analytics Lab</a></p>
     </div>
 
 
