--- a/proj_SpecialIssues/website/static/css/login.css
+++ b/proj_SpecialIssues/website/static/css/login.css
@@ -9,14 +9,32 @@
     border-color: #113a5c!important;
     color: white!important;
 }
+.container-login{
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    height: 100%;
+
+}
+.background-image{
+    background-image: url(https://www.cefet-rj.br/images/imagens_artigos/2015/10/bloco_e.jpg);
+    background-size: cover;
+    display: flex;
+    height: 80vh;
+    position: relative;
+    padding: 0;
+}
+
 .login-box {
-width: 300px; 
-padding: 20px; 
-background-color: white; 
-border-radius: 5px; 
-box-shadow: 0px 0px 3px  #576672; 
-margin: 0 auto; 
-margin-top: 30px;
+    width: 300px; 
+    padding: 20px; 
+    background-color: white; 
+    border-radius: 5px; 
+    box-shadow: 0px 0px 3px  #576672; 
+    margin: 0 auto; 
+    margin-top: 30px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 .h1-bg {
     font-size: 40px;
