--- a/proj_SpecialIssues/website/templates/admin/login.html
+++ b/proj_SpecialIssues/website/templates/admin/login.html
@@ -8,37 +8,32 @@
 
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
 
-
-<div class="row">
-    <div class="text-center"></div>
-    <div class="text-center">
-
-<div class="container" style="margin-top: 10px; text-align: center;">
+<div class="background-image">
     
-    
-    
-    <form method="post" enctype="multipart/form-data">
-        <div class="login-box"> 
-            <div class="h1-bg">
-                <h1 class="text-center h1-bg" style="color: #0a497e ; font-size: 40px;"> Entrar </h1>
-            </div>
-            <div class="form-group">
-                <label for="{{ form.usuario.id }}" style="color: black">Usuário</label>
-                <div>{{ form.usuario(class="form-control-sm", style="border: 1px solid #0a497e; background-color: #f1f8fe") }}</div>
-            </div>
-            <div class="form-group">
-                <label for="{{ form.senha.id }}" style="color: black;">Senha</label>
-                <div>{{ form.senha(class="form-control-sm", style="border: 1px solid #0a497e; background-color: #f1f8fe" ) }}</div>
-            </div>
-            <p>
-                <input type="submit" value="Login" class="btn btn-info btn-control btn-login" style="margin-top: 10px;">
-            </p>
-        </div>
-    </form>
-    
-    
-</div> 
+    <div class="container-login">
+            <form method="post" enctype="multipart/form-data">
+                <div class="login-box"> 
+                    <div class="h1-bg">
+                        <h1 class="text-center h1-bg" style="color: #0a497e ; font-size: 40px;"> Entrar </h1>
+                    </div>
+                    <div class="form-group">
+                        <label for="{{ form.usuario.id }}" style="color: black">Usuário</label>
+                        <div>{{ form.usuario(class="form-control-sm", style="border: 1px solid #0a497e; background-color: #f1f8fe") }}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="{{ form.senha.id }}" style="color: black;">Senha</label>
+                        <div>{{ form.senha(class="form-control-sm", style="border: 1px solid #0a497e; background-color: #f1f8fe" ) }}</div>
+                    </div>
+                    <p>
+                        <input type="submit" value="Login" class="btn btn-info btn-control btn-login" style="margin-top: 10px;">
+                    </p>
+                </div>
+            </form>
+        
+    </div> 
 </div>
+
+
 {% include 'footer.html' %}
 
 {% endblock content %}
