--- a/proj_SpecialIssues/website/templates/_messages.html
+++ b/proj_SpecialIssues/website/templates/_messages.html
@@ -1,15 +1,19 @@
 <style>
+  .alert-container {
+    position: fixed;
+    z-index: 9999; /* Garante que o alerta esteja sempre por cima */
+  }
   .alert {
-    padding: 5px 10px; 
+    padding: 5px 10px;
     max-width: 300px;
     list-style-type: none;
     text-align: center;
-    position: absolute;
-    opacity: 1; 
-    transition: opacity 1s ease-in-out; 
+    position: fixed;
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 9999; /* Garante que a mensagem esteja sempre acima de outros elementos */
   }
 
-  
   .alert.fade-out {
     opacity: 0;
   }
@@ -17,18 +21,24 @@
 
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
-    <ul class="flashes">
+    <div class="alert-container">
       {% for category, message in messages %}
-        <li class="alert alert-{{ category }}">
+        <div class="alert alert-{{ category }}">
           {{ message }}
-          <script>
-            
-            setTimeout(function() {
-              document.querySelector('.alert').classList.add('fade-out');
-            }, 3000);
-          </script>
-        </li>
+        </div>
       {% endfor %}
-    </ul>
+    </div>
+    <script>
+      // Remove o alerta após um período de tempo
+      setTimeout(function() {
+        var alerts = document.querySelectorAll('.alert');
+        alerts.forEach(function(alert) {
+          alert.classList.add('fade-out');
+          alert.addEventListener('transitionend', function() {
+            alert.remove(); // Remove o alerta da DOM após a transição
+          });
+        });
+      }, 1000);
+    </script>
   {% endif %}
 {% endwith %}
