--- a/proj_SpecialIssues/website/templates/admin/inserirnova.html
+++ b/proj_SpecialIssues/website/templates/admin/inserirnova.html
@@ -40,7 +40,7 @@
   document.addEventListener("DOMContentLoaded", function () {
       flatpickr(".datepicker", {
           dateFormat: "d/m/Y" 
-          ,appendTo: document.querySelector('.datepicker-wrapper') 
+          appendTo: document.querySelector('.datepicker-wrapper') 
 
       });
   });
