--- a/proj_SpecialIssues/website/static/css/inserir.css
+++ b/proj_SpecialIssues/website/static/css/inserir.css
@@ -13,6 +13,12 @@
     border-color: #113a5c!important;
     color: white!important;
 }
+.form-control-sm{
+    border: 1px solid #0a497e; 
+    width: 500px; 
+    border-radius: 5px;
+
+}
 .h1-bg {
     font-size: 40px;
     text-align: center;
@@ -27,4 +33,18 @@
     right: 0;
     height: 1px;
     background: linear-gradient(to right, white, #0a497e, white); 
+}
+@media only screen and (max-width: 514px){
+    .form-control-sm{
+        width: 80%;
+    }
+    .h1-bg {
+        font-size: 30px!important;
+        text-align: center;
+        position: relative;
+    }
+    .btn{
+        width: 150px;
+        font-size: 14px!important;
+    }
 }
