--- a/proj_SpecialIssues/website/templates/admin/inserirnova.html
+++ b/proj_SpecialIssues/website/templates/admin/inserirnova.html
@@ -13,17 +13,17 @@
     {% from "suporteenvio.html" import render_field %}
     <form method="post" enctype="multipart/form-data">
         <div class="text-center">
-            {{ render_field(form.editora, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px") }}
-            {{ render_field(form.revista, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px") }}
-            {{ render_field(form.titulo, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px") }}
-            {{ render_field(form.link, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px") }}
-            {{ render_field(form.prazo, class="form-control-sm datepicker", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px") }}
-            {{ render_field(form.datanot, class="form-control-sm datepicker", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px") }}
+            {{ render_field(form.editora, class="form-control-sm") }}
+            {{ render_field(form.revista, class="form-control-sm") }}
+            {{ render_field(form.titulo, class="form-control-sm") }}
+            {{ render_field(form.link, class="form-control-sm") }}
+            {{ render_field(form.prazo, class="form-control-sm datepicker") }}
+            {{ render_field(form.datanot, class="form-control-sm datepicker") }}
             <div class="text-center">
                 <label for="{{ form.detalhes.id }}" style="font-weight: bold;">Detalhes</label>
             </div>
             <div class="text-center">
-                <textarea name="{{ form.detalhes.name }}" id="{{ form.detalhes.id }}" class="form-control-sm resize-diagonal" style="border: 1px solid #0a497e; min-width: 500px; min-height: 200px; width: 500px; border-radius: 5px" rows="3">{{ form.detalhes.data }}</textarea>
+                <textarea name="{{ form.detalhes.name }}" id="{{ form.detalhes.id }}" class="form-control-sm resize-diagonal" rows="3">{{ form.detalhes.data }}</textarea>
             </div>
             
         </div>
