--- a/proj_SpecialIssues/website/templates/admin/editar.html
+++ b/proj_SpecialIssues/website/templates/admin/editar.html
@@ -14,13 +14,19 @@
     {% from "suporteenvio.html" import render_field %}
     <form method="post" enctype="multipart/form-data">
         <div class="text-center">
-            {{ render_field(form.editora, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px", value=spi.editora)}}
-            {{ render_field(form.revista, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px", value=spi.revista)}}
-            {{ render_field(form.titulo, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px", value=spi.titulo)}}
-            {{ render_field(form.link, class="form-control-sm", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px", value=spi.link)}}
-            {{ render_field(form.prazo, class="form-control-sm datepicker", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px",value=spi.prazo) }}
-            {{ render_field(form.datanot, class="form-control-sm datepicker", style="border: 1px solid #0a497e; width: 500px; border-radius: 5px", value=spi.datanot)}}
-            
+            {{ render_field(form.editora, class="form-control-sm", value=spi.editora)}}
+            {{ render_field(form.revista, class="form-control-sm", value=spi.revista)}}
+            {{ render_field(form.titulo, class="form-control-sm", value=spi.titulo)}}
+            {{ render_field(form.link, class="form-control-sm", value=spi.link)}}
+            {{ render_field(form.prazo, class="form-control-sm datepicker",value=spi.prazo) }}
+            {{ render_field(form.datanot, class="form-control-sm datepicker", value=spi.datanot)}}
+            <div class="text-center">
+                <label for="{{ form.detalhes.id }}" style="font-weight: bold;">Detalhes</label>
+            </div>
+            <div class="text-center">
+                <textarea name="{{ form.detalhes.name }}" id="{{ form.detalhes.id }}" class="form-control-sm resize-vertical" rows="3">{{ form.detalhes.data }}</textarea>
+            </div>
+
         </div>
         <p class="text-center">
             <div class="mt-3 text-center">
